docs: update language and agent notes